Modified build.gradle