@@ -7,8 +7,32 @@
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
+    id 'java'
     id 'application'
+    id 'maven'
+    id 'maven-publish'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
+}
+
+javafx {
+    // Points to JDK and its JavaFX libraries, also declares target runtime JDK
+//    javaRuntime = '/Library/Java/JavaVirtualMachines/jdk1.7.0_40.jdk'
+
+    version = '17' // Specify javafx sdk version
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media', 'javafx.graphics']
+    sdk = System.getenv('JAVAFX_HOME')
+    if (sdk == null || sdk.isBlank()) {
+        throw new InvalidUserDataException("JAVAFX_HOME environment variable is not set. It must be set to root folder where JAVAFX SDK is located")
+    }
+    application {
+        def javafxHome = System.getenv('JAVAFX_HOME')
+        mainClassName = 'com.foo.FooApp'
+        applicationName = 'foo-app'
+        applicationDefaultJvmArgs = [
+            "--module-path=${javafxHome}" + File.separator + 'lib',
+            '--add-modules=javafx.controls,javafx.swing,javafx.media,javafx.graphics']
+        println("applicationDefaultJvmArgs:" + applicationDefaultJvmArgs)
+    }
 }
 
 repositories {
